style/components/_news-item.scss
.news-item {
  padding-left: 2em;
}

.news-item__text {
  padding: 0;
  margin: 0;

  color: $gray;
  font-size: 0.8125rem;

  p {
    margin-top: 1em;
    margin-bottom: 0;
  }

  a {
    color: $scorpion;
    text-decoration: underline;

    &:visited {
      color: $gray;
    }
  }
}

.news-item__no-comments {
  margin: 4em 0 0;
  padding: 0 0 2em;
  font-size: 0.875rem;
}

.news-item__comments {
  margin: 4em 0 0;
  padding: 0 0 1em;
}

